# marvin

./: .env.tpl  .gitignore  Dockerfile  README.md  pyproject.toml  spex_bot.py  test.txt
.github/workflows/: cd.yml
src/marvin/: apotd.py  bot.py  cleardarksky.py  help.py  minecraft.py  openweather.py  static_responses.py
